@@ -1,6 +1,7 @@
 Version 2.4.1   unreleased
 
-	* Add new PropertiesUtils and HierarchicalProperties classes.
+	* Add new PropertiesUtils and HierarchicalProperties utility classes.
+	* Pull up AbstractStandardDialog, AbstractWidgetUtils and NativeUtils now that it's clear they're common.
 
 Version 2.4.0   17 Oct 2013
 
